[package]
name = "drcov2lcov"
version = "0.2.1"
edition = "2021"
authors = ["George Liontos <georgeliontos98@gmail.com>"]
license = "GPL-2.0"
repository = "https://github.com/GeorgeLS/drcov2lcov"
description = """
Generate line coverage from drcov files
"""
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["line-coverage"]

[dependencies]
anyhow = "1.*"
byteorder = "1.*"
clap = { version = "4.*", features = ["derive"] }
env_logger = "0.11.5"
gimli = "0.31.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.20"
memmap2 = "0.9"
object = "0.36.3"
ouroboros = "0.18.0"
regex = "1.*"
roaring = "0.10.2"
